add claim MTP; users WIP
